v0.02: Fix some rules that break in Firefox.

--- a/rLogViewer/public/style.css
+++ b/rLogViewer/public/style.css
@@ -1,10 +1,9 @@
 /*
- * style.css v0.01
+ * style.css v0.02
  * This file is part of the rLogViewer project.  
  * Copyright (c) AIAC GI17 P9 Team. All rights reserved.  
- * Licensed under the MIT License. See LICENSE file in the project root for full license information.  
+ * Licensed under the MIT License.
 */
-
 * {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -92,12 +91,12 @@ body {
 }
 
 .top-bar .item img {
-  height: 50%;
+  height: 24px;
   margin-right: 0.5em;
 }
 
 .top-bar .item:first-child img {
-  height: 70%;
+  width: 32px;
 }
 
 /*
@@ -113,6 +112,7 @@ body {
   flex-direction: column;
   width: 100%;
   height: fit-content;
+  height: -moz-fit-content;
   padding: 20px;
   background-color: #eeeeee;  
 }
@@ -152,7 +152,7 @@ body {
   color: #fff;
   align-self: center;  
   height: 80%;
-  aspect-ratio: 1;  
+  width: 40px;
   margin-left: 10px;
   border: none;
   border-radius: 10px;
@@ -201,6 +201,7 @@ body {
 #page-result-summary {
   flex: 1;
   text-align: center;
+  font-weight: bold;
 }
 
 /*
@@ -246,6 +247,7 @@ table#log-page tr:not(:first-child) th {
   display: flex;
   align-items: center;
   width: fit-content;
+  width: -moz-fit-content;
   height: 24px;
   border-radius: 5px;
   padding: 2px 8px;
@@ -443,5 +445,5 @@ table#log-page tr:not(:first-child) th {
   font-size: xx-large;
   color: lightgray;
   width: 100%;
-  height: 100%;  
+  height: 100%;    
 }
